samples/good/Imports/aml-13-nested-dependson/imports.mf
<imports>
  <package name="com.aras.innovator.solution.PLM" path=".\">
    <metadata>
      <dependson />
    </metadata>
  </package>
</imports>
