samples/bad/Imports/aml-11-dependson-missing-name/imports.mf
<imports>
  <package name="com.aras.innovator.solution.PLM" path=".\">
    <dependson />
  </package>
</imports>
